# NepaliKhabar

./: .env  .gitignore  README  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: Dockerfile  config.py  db.py  init_db.py  main.py  models.py  requirements.txt
backend/flows/: scrape_flow-deployment.yaml  scrape_flow.py
backend/scrapers/: base.py  factory.py  site_a.py  site_b.py  site_ekantipur.py
backend/src/: config.py  main.py
backend/src/api/: __init__.py  endpoints.py
backend/src/database/: models.py  session.py
backend/src/factories/: abstact_factory.py  concrete_factory.py
backend/src/scrapers/: base_scraper.py  ekantipur_scraper.py  kathmandupost_scraper.py
backend/src/tests/: test_scrappers.py
backend/src/utils/: request_utils.py
frontend/scraping-sites/: package-lock.json  package.json
